--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -131,7 +131,11 @@
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
-
+      
+      @media(max-width:600px) {
+        width: 94%;
+        margin: 0 3% 50px;
+      }
 
       &.b {
         &::before {
@@ -189,8 +193,8 @@
         /*max-width: 90%;*/
       }
       @media(max-width: 600px) {
-        margin: 0 5vw 50px;
-        max-width: 90%;
+        min-width: auto;
+        /*max-width: 90%;*/
       }
 
       h2 {
