--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -67,7 +67,7 @@
 			a {
 				border: 0;
 		    color: #fff;
-		    background: linear-gradient(-65deg,#4f91ab,#1d9e98);
+		    background: linear-gradient(-40deg,#0359a2,#10909c);
 				padding: 4px 12px;
 				font-size: .95em;
 		    display: inline-block;
