--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -25,6 +25,7 @@
 @import 'social.less';
 @import 'swiper.less';
 @import 'transactional.less';
+@import 'table.less';
 
 /*====================================================
 	about author and comment and next-prev link
@@ -53,7 +54,6 @@
 	.avatar {
 		width: 100px;
 		height: 100px;
-		.border-radius(50%);
 	}
 
 	.meta-info {
