ghost_footer placement

--- a/src/less/table.less
+++ b/src/less/table.less
@@ -79,6 +79,10 @@ td, th{
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
 
+    &:hover{
+      cursor: grab;
+    }
+
     td:empty:before {
       content: '\00a0';
     }
