--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -33,7 +33,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 
 	{{ghost_foot}}
-
+	<script>
+	$('pre code').each(function(i, block) {
+		hljs.highlightBlock(block);
+	});
+	</script>
 	<script type="text/javascript">
     let ghostSearch = new GhostSearch({
         input:   '#my-custom-input',
