--- a/src/less/author.less
+++ b/src/less/author.less
@@ -45,7 +45,7 @@
 
 					.name {
 						font-size: 1.4em;
-						font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
+						font-family: 'Gordita-Medium', 'Gordita-Light', sans-serif;
 					}
 
 					.country,
@@ -285,7 +285,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
+			font-family: 'Gordita-Medium', 'Gordita-Light', sans-serif;
 		}
 
 		i {
