--- a/src/less/components.less/old_table.less
+++ b/src/less/components.less/old_table.less
@@ -74,7 +74,7 @@
 				padding: 10px 5px;
 				font-weight: 900;
 				font-size: 10px;
-				font-family: AvenirNextLTPro-Medium,sans-serif;
+				font-family: Gordita-Medium,sans-serif;
 			}
 			@media (max-width: 600px) {
 				tr th {
