--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -387,7 +387,7 @@
       position: relative;
       bottom: 0;
       color: #162c52;
-      font-family: AvenirNextLTPro-Medium,AvenirNextLTPro-Light;
+      font-family: Gordita-Medium,Gordita-Light;
       width: auto;
       display: -webkit-box;
       display: -ms-flexbox;
@@ -403,7 +403,7 @@
         line-height: 1;
         margin: 0;
         font-weight: 600;
-        font-family: AvenirNextLTPro-Regular;
+        font-family: Gordita-Regular;
       }
 
       p {
@@ -413,7 +413,7 @@
         line-height: 1.2;
         text-align: left;
         font-weight: 100;
-        font-family: AvenirNextLTPro-Light;
+        font-family: Gordita-Light;
       }
 
       span {
