--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'AvenirNextLTPro-Regular', sans-serif;
+	font-family: 'Gordita-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -30,7 +30,7 @@ article {
 }
 
 strong {
-  font-family: AvenirNextLTPro-Medium,AvenirNextLTPro-Light;
+  font-family: Gordita-Medium,Gordita-Light;
   font-weight: 500;
 }
 
@@ -43,7 +43,7 @@ strong {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'CompassSans-Regular', 'AvenirNextLTPro-Medium', serif;
+	font-family: 'CompassSans-Regular', 'Gordita-Medium', serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -51,18 +51,19 @@ h1 {
 
 
 
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-family: 'CompassSans-Regular', 'AvenirNextLTPro-Medium', serif;
+	font-family: 'CompassSans-Regular', 'Gordita-Medium', serif;
+	font-weight: 700;
+	color: @header-color;
+}
+
+h3 {
+	font-family: 'Gordita-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 }
@@ -75,7 +76,7 @@ h1 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'CompassSans-Medium', 'AvenirNextLTPro-Medium';
+	font-family: 'CompassSans-Medium', 'Gordita-Medium';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -86,16 +87,15 @@ h2 {
 		display: block;
 	}
 }
-
+/*
 .h3,
 h3 {
 	font-size: 1.5em;
 	text-transform: uppercase;
-	font-weight: 300;
 	margin-top: 40px;
 	margin-bottom: 0;
 }
-
+*/
 .h4,
 h4 {
 	font-size: 1.3em;
@@ -106,7 +106,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'AvenirNextLTPro-Medium', serif;
+	font-family: 'Gordita-Medium', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
