--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -206,7 +206,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'CompassSans-Regular',AvenirNextLTPro-Medium;
+        font-family: 'CompassSans-Regular',Gordita-Medium;
         /*  &::after {
           content: "";
           width: 90px;
@@ -246,7 +246,7 @@
 
           h5 {
             font-size: 1em;
-            font-family: 'AvenirNextLTPro-Light';
+            font-family: 'Gordita-Light';
             color: #3c3d46;
             line-height: 1.2;
             font-weight: 100;
@@ -368,7 +368,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'AvenirNextLTPro-Light';
+                font-family: 'Gordita-Light';
                 margin-right: 5px;
               }
 
