--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -93,7 +93,7 @@
       font-size: 15px;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: 'AvenirNextLTPro-Light' !important;
+      font-family: 'Gordita-Light' !important;
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden;
