--- a/src/less/login.less
+++ b/src/less/login.less
@@ -141,7 +141,7 @@
       padding: 10px 4%;
       width: 90%;
       font-size: 0.9em;
-      font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
+      font-family: CompassSans-Light,Gordita-Light,sans-serif!important;
       font-weight: 200;
       -webkit-transition: 0.2s all;
       transition: 0.2s all;
