--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -107,6 +107,7 @@
 
 			span {
 				line-height: 1;
+				font-size: .7em;
 			}
 
 			&:hover {
@@ -134,8 +135,8 @@
 			}
 
 			span {
-				font-size: 14px;
 				color: white;
+				font-size: .7em;
 				@media(max-width: 600px) {
 					display: none;
 				}
@@ -200,8 +201,13 @@
 			padding-bottom: 20px;
 		}
 
+		span {
+			font-size: .7em;
+		}
+
 		.share-icons {
 			z-index: 20;
+
 		}
 	}
 
