--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -26,9 +26,9 @@
 			overflow: hidden;
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
-			font-family: 'CompassSans-Light', AvenirNextLTPro-Light,sans-serif !important;
+			font-family: 'Gordita-Regular',sans-serif !important;
 			line-height: 1.5em;
-			font-size: 1em;
+			font-size: .9em;
 			font-weight: 500;
 			color: #2d2f35;
 			@media(max-width: 600px) {
@@ -95,7 +95,7 @@
 			text-align: left;
 			font-size: 1.3em;
 			color: #404146;
-			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
+			font-family: 'CompassSans-Regular', Gordita-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
 			}
@@ -149,7 +149,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular',serif;
+		font-family: 'CompassSans-Regular','Gordita-Regular',serif;
 		width: 100%;
 		padding-right: 50px;
 		justify-content: space-between;
@@ -164,7 +164,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular';
+			font-family: 'CompassSans-Regular','Gordita-Regular';
 		}
 
 		.author-mobile {
@@ -175,7 +175,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'CompassSans-Regular','AvenirNextLTPro-Medium';
+				font-family: 'CompassSans-Regular','Gordita-Medium';
 				color: #224a69;
 			}
 			@media (max-width: 900px) {
@@ -186,7 +186,7 @@
 		.meta-item {
 			display: flex;
 			margin: auto 15px auto 0;
-			font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light';
+			font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -228,7 +228,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'CompassSans-Regular','AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light' !important;
+					font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
 					color: #627d90;
 					line-height: 1;
 					overflow: hidden;
@@ -245,7 +245,7 @@
 
 			&.date {
 				span {
-					font-family: 'CompassSans-Regular',AvenirNextLTPro-Regular,sans-serif;
+					font-family: 'CompassSans-Regular',Gordita-Regular,sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -319,7 +319,7 @@
 
 	.btn {
 		font-size: 16px;
-		font-family: 'AvenirNextLTPro-Medium',serif;
+		font-family: 'Gordita-Medium',serif;
 		text-transform: uppercase;
 		padding: 14px 20px;
 		line-height: 1;
@@ -337,7 +337,7 @@
 
 		@media(max-width: 600px) {
 			padding: 13px 18px;
-			font-family: AvenirNextLTPro-Regular,serif;
+			font-family: Gordita-Regular,serif;
 		}
 	}
 }
