--- a/assets/css/MyFontsWebfontsKit.css
+++ b/assets/css/MyFontsWebfontsKit.css
@@ -8,15 +8,15 @@
  *
  * You may obtain a valid license at the URLs below.
  *
- * Webfont: AvenirNextLTPro-Light by Linotype
+ * Webfont: Gordita-Light by Linotype
  * URL: https://www.myfonts.com/../fonts/linotype/avenir-next-pro/pro-light/
  * Copyright: Copyright &#x00A9; 2012 - 2017 Monotype GmbH. All rights reserved.
  *
- * Webfont: AvenirNextLTPro-Medium by Linotype
+ * Webfont: Gordita-Medium by Linotype
  * URL: https://www.myfonts.com/../fonts/linotype/avenir-next-pro/pro-medium/
  * Copyright: Copyright &#x00A9; 2004 - 2017 Monotype GmbH. All rights reserved.
  *
- * Webfont: AvenirNextLTPro-Regular by Linotype
+ * Webfont: Gordita-Regular by Linotype
  * URL: https://www.myfonts.com/../fonts/linotype/avenir-next-pro/pro-regular/
  * Copyright: Copyright &#x00A9; 2004 - 2017 Monotype GmbH. All rights reserved.
  *
@@ -32,9 +32,43 @@
 @import url("//hello.myfonts.net/count/3792ee");
 @import url("//hello.myfonts.net/count/37415b");
 
-@font-face {font-family: 'AvenirNextLTPro-Light';src: url('../fonts/3792EE_0_0.eot');src: url('../fonts/3792EE_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/3792EE_0_0.woff2') format('woff2'),url('../fonts/3792EE_0_0.woff') format('woff'),url('../fonts/3792EE_0_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('../fonts/3792EE_1_0.eot');src: url('../fonts/3792EE_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/3792EE_1_0.woff2') format('woff2'),url('../fonts/3792EE_1_0.woff') format('woff'),url('../fonts/3792EE_1_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirNextLTPro-Regular';src: url('../fonts/3792EE_2_0.eot');src: url('../fonts/3792EE_2_0.eot?#iefix') format('embedded-opentype'),url('../fonts/3792EE_2_0.woff2') format('woff2'),url('../fonts/3792EE_2_0.woff') format('woff'),url('../fonts/3792EE_2_0.ttf') format('truetype');}
+
+@font-face {
+	font-family: 'Gordita-Light';
+	src: url('../fonts/gordita-light.eot');
+	src: url('../fonts/gordita-light.eot?#iefix') format('embedded-opentype'),
+             url('../fonts/gordita-light.woff2') format('woff2'),
+	     url('../fonts/gordita-light.woff') format('woff'),
+	     url('../fonts/gordita-light.ttf') format('truetype'),
+	     url('../fonts/gordita-light.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gordita-Regular';
+	src: url('../fonts/gordita-regular.eot');
+	src: url('../fonts/gordita-regular.eot?#iefix') format('embedded-opentype'),
+             url('../fonts/gordita-regular.woff2') format('woff2'),
+	     url('../fonts/gordita-regular.woff') format('woff'),
+	     url('../fonts/gordita-regular.ttf') format('truetype'),
+	     url('../fonts/gordita-regular.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gordita-Medium';
+	src: url('../fonts/gordita-medium.eot');
+	src: url('../fonts/gordita-medium.eot?#iefix') format('embedded-opentype'),
+             url('../fonts/gordita-medium.woff2') format('woff2'),
+	     url('../fonts/gordita-medium.woff') format('woff'),
+	     url('../fonts/gordita-medium.ttf') format('truetype'),
+	     url('../fonts/gordita-medium.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
 @font-face {font-family: 'DroidSansMonoSlashed';src: url('../fonts/DroidSansMonoSlashed.ttf');}
 
