--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -138,7 +138,7 @@
 					font-size: 16px;
 					margin: 0;
 					line-height: 1.4;
-					font-family: AvenirNextLTPro-Regular,sans-serif !important;
+					font-family: Gordita-Regular,sans-serif !important;
 					font-weight: 500;
 					display: block;
 
@@ -157,7 +157,7 @@
 						font-size: .8em;
 						margin-top: 2px;
 				    font-weight: 200;
-				    font-family: AvenirNextLTPro-Light,sans-serif;
+				    font-family: Gordita-Light,sans-serif;
 					}
 				}
 
@@ -172,7 +172,7 @@
 					font-size: 0.9em;
 					margin-top: 9px;
 					font-weight: 200;
-					font-family: 'AvenirNextLTPro-Light', sans-serif;
+					font-family: 'Gordita-Light', sans-serif;
 
 					a {
 						color: @white;
