--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -32,7 +32,7 @@
 			padding: 17px 5%;
 	    width: 90%;
 	    font-size: 1em;
-	    font-family: 'CompassSans-Light',AvenirNextLTPro-Light,sans-serif!important;
+	    font-family: 'CompassSans-Light',Gordita-Light,sans-serif!important;
 	    font-weight: 200;
 	    -webkit-transition: .3s all;
 	    transition: .3s all;
@@ -61,7 +61,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
+		font-family: CompassSans-Light,Gordita-Light,sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -301,7 +301,7 @@
 				letter-spacing: 0;
 				font-size: 16px;
 				margin: 0;
-				font-family: CompassSans-Regular,AvenirNextLTPro-Medium,AvenirNextLTPro-Light,sans-serif;
+				font-family: CompassSans-Regular,Gordita-Medium,Gordita-Light,sans-serif;
 				font-weight: 500;
 				display: inline-block;
 			}
@@ -381,7 +381,7 @@
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
+			font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
 			font-weight: 100;
 			display: inline-block;
 
@@ -414,7 +414,7 @@
 		p {
 			margin: 0;
 			font-size: 15px;
-			line-height: 1.65;
+			line-height: 1.8;
 			padding-right: 0;
 		}
 	}
@@ -422,7 +422,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
+			font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
@@ -443,7 +443,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+		font-family: CompassSans-Regular,Gordita-Medium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -453,7 +453,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+		font-family: CompassSans-Regular,Gordita-Medium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -514,7 +514,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
+				font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
