--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -27,8 +27,8 @@
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
 			font-family: 'Gordita-Regular',sans-serif !important;
-			line-height: 1.5em;
-			font-size: .9em;
+			line-height: 1.6em;
+			font-size: 1em;
 			font-weight: 500;
 			color: #2d2f35;
 			@media(max-width: 600px) {
@@ -91,11 +91,11 @@
 		.post-excerpt {
 			margin: 10px auto 0;
 			line-height: 1.21;
-			font-weight: 500;
+			font-weight: 100;
 			text-align: left;
-			font-size: 1.3em;
-			color: #404146;
-			font-family: 'CompassSans-Regular', Gordita-Regular,serif;
+			font-size: 1.4em;
+			color: #153b52;
+			font-family: 'CompassSans-Medium',Gordita-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
 			}
