--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -409,11 +409,11 @@
       p {
         font-size: 14px;
         color: @text-color;
-        margin: 5px 0;
-        line-height: 1.2;
+        margin: 9px 0;
+        line-height: 1.5;
         text-align: left;
         font-weight: 100;
-        font-family: Gordita-Light;
+        font-family: Gordita-Regular;
       }
 
       span {
