--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -131,7 +131,7 @@
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
-      
+
       @media(max-width:600px) {
         width: 94%;
         margin: 0 3% 50px;
@@ -246,7 +246,7 @@
 
           h5 {
             font-size: 1em;
-            font-family: 'Gordita-Light';
+            font-family: 'Gordita-Regular';
             color: #3c3d46;
             line-height: 1.2;
             font-weight: 100;
@@ -368,7 +368,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'Gordita-Light';
+                font-family: 'Gordita-Regular';
                 margin-right: 5px;
               }
 
