--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -65,7 +65,7 @@
 		}
 
 		.post-title {
-			font-size: 200%;
+			font-size: 2.4em;
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
