--- a/src/less/post.less
+++ b/src/less/post.less
@@ -422,7 +422,7 @@
 
 		img {
 			border: 1px solid #cecece;
-			width: 100%;
+			width: 99%;
 		}
 
 		a {
@@ -715,8 +715,12 @@
 		width: fit-content;
 		margin: 40px auto 11px;
 
+		&:hover{
+			cursor: zoom-in;
+		}
+
 		img {
-			width: 100%;
+			width: 99%;
 			border: 1px solid #d8d8d8;
 		}
 		@media(max-width: 600px) {
