--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -9,6 +9,9 @@
 	justify-content: space-between;
 	align-items: center;
 	height: 85px;
+	padding: 0;
+  padding-top: 20px;
+	border-top: 1px solid #efefef;
 	@media(max-width: 800px) {
 		display: block;
 		height: fit-content;
