--- a/src/less/post.less
+++ b/src/less/post.less
@@ -286,7 +286,7 @@
 			}
 
 			span {
-				font-family: 'CompassSans-Regular', Gordita-Regular,sans-serif !important;
+				font-family: 'Gordita-Regular',sans-serif !important;
 				font-weight: 500;
 			}
 
@@ -518,8 +518,9 @@
 		font-style: italic;
 		background-color: rgba(33, 69, 138, 0.04);
 		color: #4e5261;
-		padding: 10px;
+		padding: 15px 0;
 		margin-top: -10px;
+		width: 99%;
 		@media(max-width: 600px) {
 			margin: 0 auto 70px;
 			font-size: 14px;
@@ -714,6 +715,7 @@
 	figure {
 		width: fit-content;
 		margin: 40px auto 11px;
+		    overflow: visible;
 
 		&:hover{
 			cursor: zoom-in;
