--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -54,7 +54,7 @@ $(document).ready(function(){
 			{{!-- Gets JIRS cards --}}
 
     stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}).limit(6).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'backlog')
@@ -63,7 +63,7 @@ $(document).ready(function(){
     });
 
     stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Data', 'Story', 'Idea', 'Content']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Data', 'Story', 'Idea', 'Content']}}).limit(6).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'todo')
@@ -72,7 +72,7 @@ $(document).ready(function(){
     });
 
     stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Content', 'Integration', 'Story', 'Idea', 'Data']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integration', 'Bug', 'Content', 'Integration', 'Story', 'Idea', 'Data']}}).limit(6).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'progress')
@@ -81,7 +81,7 @@ $(document).ready(function(){
     });
 
     stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-      db.collection('jira').find({status: 'Done', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}}, { limit: 6}).asArray()
+      db.collection('jira').find({status: 'Done', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}}).limit(6).asArray()
     ).then(docs => {
         console.log("Found docs", docs)
         populateCards(docs, 'done')
