--- a/src/less/code.less
+++ b/src/less/code.less
@@ -66,6 +66,7 @@ code {
   * {
     font-size: 14px;
     font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
+    margin: 0;
     @media(max-width: 600px) {
       font-size: 12px;
     }
