--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 {{#get "posts" limit="4" filter="tags:-[hash-hidden,Roundup,roundup]"}}
-<div class="widget">
+<div class="widget recent">
 	<h4 class="title">Recent</h4>
 	<div class="recent-post">
 		{{#foreach posts}}
