--- a/partials/widget-relatedpost.hbs
+++ b/partials/widget-relatedpost.hbs
@@ -1,5 +1,5 @@
 <!-- start widget -->
-<div class="widget">
+<div class="widget related">
 	<h4 class="title">Related</h4>
 	<div class="recent-post">
 		{{#get "posts" limit="4" include="tags" filter="id:-{{id}}+tag:{{primary_tag.slug}}"}}
