--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -27,8 +27,8 @@
 		margin: 20px 0;
 
 		a {
-			color: @text-post-header;
-			background: #F2F2F2;
+			color: #119ac3;
+			background: #e5ebf3;
 			font-size: 0.8em;
 			margin-right: 15px;
 			transition: all 0.3s;
