--- a/src/less/post.less
+++ b/src/less/post.less
@@ -79,10 +79,10 @@
 			font-weight: 600;
 		}
 		@media(max-width: 600px) {
-			font-size: em;
-			line-height: 1.3;
-			max-width: 95%;
-			font-weight: 500;
+			font-weight: 100;
+			font-size: 1.1em;
+			font-family: CompassSans-Medium;
+			    max-width: 95%;
 		}
 	}
 
@@ -122,11 +122,10 @@
 		color: @header-color;
 		margin-bottom: 12px;
 		@media(max-width: 800px) {
-			font-weight: 600;
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.15em;
+			font-size: 1.1em;
 			text-align: center;
 			line-height: 1.4;
 		}
@@ -140,6 +139,11 @@
 		text-align: justify;
 		font-size: 1em;
 		line-height: 2;
+
+		@media(max-width: 600px){
+			font-size: .9em;
+			line-height: 1.9;
+		}
 	}
 
 	blockquote {
@@ -317,7 +321,6 @@
 
 					span {
 						font-weight: 500;
-						font-size: 0.9em !important;
 					}
 
 					i {
@@ -435,6 +438,7 @@
 			margin-left: 20px;
 			padding-left: 20px;
 			display: block;
+
 		}
 
 		blockquote {
@@ -518,7 +522,7 @@
 		margin-top: -10px;
 		width: 99%;
 		@media(max-width: 600px) {
-			margin: 0 auto 70px;
+			margin: 0 auto 30px;
 			font-size: 14px;
 			padding: 0;
 			height: auto;
@@ -622,6 +626,7 @@
 				line-height: 1.6;
 				@media(max-width: 600px) {
 					margin-left: 0;
+					font-size: .9em;
 				}
 
 				&::before {
