--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -157,7 +157,7 @@
 						font-size: .8em;
 						margin-top: 2px;
 				    font-weight: 200;
-				    font-family: Gordita-Light,sans-serif;
+				    font-family: Gordita-Regular,sans-serif;
 					}
 				}
 
