--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -28,7 +28,7 @@
 
 		a {
 			color: #119ac3;
-			background: #e5ebf3;
+			background: #ecf1f9;
 			font-size: 0.8em;
 			margin-right: 15px;
 			transition: all 0.3s;
