--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,6 +1,8 @@
 {{#author}}
 <div class="sidebar">
-	{{> widget-authorwebsite}}
+	{{#if website}}
+		{{> widget-authorwebsite}}
+	{{/if}}
 	{{> widget-github}}
 	{{> widget-medium}}
 	{{> widget-meetup}}
