--- a/src/less/author.less
+++ b/src/less/author.less
@@ -12,6 +12,12 @@
 			display: none !important;
 		}
 
+		.author-website {
+			content {
+				padding:0;
+			}
+		}
+
 		.github {
 			order: 1;
 
@@ -44,14 +50,14 @@
 					display: inline-block;
 
 					.name {
-						font-size: 1.4em;
+						font-size: 1.2em;
 						font-family: 'Gordita-Medium', 'Gordita-Light', sans-serif;
 					}
 
 					.country,
 					.location {
 						display: block;
-					}
+						font-size: 1em;
 				}
 			}
 
@@ -59,7 +65,7 @@
 				text-align: center;
 				padding: 20px;
 				display: block;
-				color: #a7a7a7;
+				color: #6f6f6f;
 				font-size: 16px;
 				font-style: italic;
 			}
@@ -182,17 +188,14 @@
 			}
 		}
 	}
-
+}
+/*
 	.LI-badge-container.horizontal.light,
 	.LI-badge-container.vertical.light {
 		width: 100% !important;
 		position: relative;
 		box-shadow: none;
-		/*
-		.LI-more-info {
-			float: left;
-		}
-		*/
+
 		.LI-footer {
 			position: absolute;
 			right: 15px;
@@ -217,16 +220,12 @@
 		.LI-profile-badge-footer {
 			padding-bottom: 20px;
 		}
-		/*
-		.LI-field {
-			display: block;
-			text-align: left;
-		}*/
+
 		.LI-logo {
 			display: none;
 		}
 	}
-
+*/
 	.main-content {
 		width: 67%;
 		margin: auto;
