--- a/src/less/author.less
+++ b/src/less/author.less
@@ -57,7 +57,8 @@
 					.country,
 					.location {
 						display: block;
-						font-size: 1em;
+						font-size: .9em;
+						line-height: 1.5;
 				}
 			}
 
@@ -68,6 +69,7 @@
 				color: #6f6f6f;
 				font-size: 16px;
 				font-style: italic;
+				margin-bottom: 30px;
 			}
 
 			.events {
