--- a/partials/widget-github.hbs
+++ b/partials/widget-github.hbs
@@ -1,7 +1,8 @@
 <!-- start widget -->
-<h3 class="title">Github</h3>
+
 <div class="widget github" style="display:none;">
-  <div class="content">
+  <h3 class="title">Github</h3>
+  <div class="widget-body">
     <div id="github-card-author"></div>
   </div>
 </div>
