--- a/src/less/author.less
+++ b/src/less/author.less
@@ -3,6 +3,10 @@
 .author-template {
 	.widget {
 		order: 1;
+
+		.widget-body {
+			background-color: white;
+		}
 	}
 
 	.sidebar {
@@ -23,7 +27,6 @@
 
 			.content {
 				padding: 5px 14px;
-    		background: white;
 			}
 		}
 
@@ -33,8 +36,7 @@
 
 		.meetup {
 			order: 2;
-			background: white;
-			padding: 0 12px;
+=			padding: 0 12px;
 
 			.userprofile {
 				padding-bottom: 10px;
