--- a/partials/widget-meetup.hbs
+++ b/partials/widget-meetup.hbs
@@ -24,8 +24,8 @@ function createMeetupCard(meetup) {
         '<div class="info">' +
         '<span class="name">' + ajaxResult['data']['name'] + '</span> \n ' +
         '<span class="location">' + ajaxResult['data']['city'] + ', ' + ajaxResult['data']['state'] + '</span></a> \n ' +
-        '<a href="https://www.meetup.com/members/' + ajaxResult['data']['id'] + '/"><span class="country">View profile</span></a></div></div></div> \n ' +
-        '<div class="events"></div>');
+        '<a href="https://www.meetup.com/members/' + ajaxResult['data']['id'] + '/"><span class="country">View profile</span></a></div></div><div class="events"></div></div> \n ' +
+        '');
     }
   });
 
