--- a/src/less/author.less
+++ b/src/less/author.less
@@ -38,8 +38,18 @@
 			order: 2;
 			padding: 0 12px;
 
+			.noevents {
+				text-align: center;
+				padding: 20px;
+				display: block;
+				color: #6f6f6f;
+				font-size: 16px;
+				font-style: italic;
+				margin-bottom: 30px;
+			}
+
 			.userprofile {
-				padding-bottom: 10px;
+				padding: 0 10px 10px;
 				margin-bottom: 10px;
 				/*border-bottom: 1px solid #e8e8e8;*/
 				.avatar {
@@ -64,15 +74,7 @@
 				}
 			}
 
-			.noevents {
-				text-align: center;
-				padding: 20px;
-				display: block;
-				color: #6f6f6f;
-				font-size: 16px;
-				font-style: italic;
-				margin-bottom: 30px;
-			}
+
 
 			.events {
 				.event {
