--- a/src/less/author.less
+++ b/src/less/author.less
@@ -38,6 +38,10 @@
 			order: 2;
 			padding: 0 12px;
 
+			.widget-body {
+				 padding: 15px 10px;
+			}
+
 			.noevents {
 				text-align: center;
 				padding: 20px;
