--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -52,7 +52,12 @@
 			font-weight: 800;
 			margin: 10px 0 15px !important;
 			font-size: 1.5em;
-		}
+
+			@media(max-width: 600px){
+				margin: 10px 0 20px!important;
+				font-size: 1.3em;
+				}
+			}
 
 		& > div > div:last-child {
 			border-bottom: 0 !important;
