--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -1,8 +1,38 @@
 <!-- start widget -->
+<!--
 <div class="widget" style="order:10">
 	<div class="twitter">
 		<h3 class="title">Twitter</h3>
 			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar transparent noborders" data-tweet-limit="5" data-width="344" data-dnt="true" data-link-color="#26a2c7" href="https://twitter.com/HackersSlackers/lists/hackers-and-slackers?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
-</div>
+</div>-->
+<div class="widget twitter">
+<h3 class="title">Twitter</h3>
+<a class="twitter-timeline"
+    data-chrome="noheader noborders transparent nofooter noscrollbar"
+    data-link-color="#0db0e2"
+    data-dnt="true"
+    data-widget-id="twitter"
+		data-tweet-limit="5"
+    href="https://twitter.com/HackersSlackers/lists/hackers-and-slackers"></a>
+	</div>
+
+		<script src="{{asset '/js/includes/customtwitter.js'}}"></script>
+
+		<script>
+		$('document').ready(function(){
+			!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
+			    if(!d.getElementById(id)){js=d.createElement(s);js.id=id;
+			    js.src="//platform.twitter.com/widgets.js";
+			    fjs.parentNode.insertBefore(js,fjs);}
+			}(document,"script","twitter-wjs");
+
+			var options = {
+			    "url": '{{asset "/css/maintwitter.css"}}'
+			};
+
+			CustomizeTwitterWidget(options);
+		});
+
+		</script>
 <!-- end widget -->
